--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
 <version>1.0.0-SNAPSHOT</version>
 <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-    <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
+    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+    <maven-shade-plugin.version>3.5.1</maven-shade-plugin.version>
     <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-    <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
-    <vertx.version>4.3.0</vertx.version>
+    <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
+    <vertx.version>4.4.5</vertx.version>
     <junit-jupiter.version>5.7.0</junit-jupiter.version>
     <main.verticle>org.qlein.oidcproxy.MainVerticle</main.verticle>
     <launcher.class>io.vertx.core.Launcher</launcher.class>
@@ -43,12 +43,12 @@
     <dependency>
         <groupId>com.nimbusds</groupId>
         <artifactId>nimbus-jose-jwt</artifactId>
-        <version>9.22</version>
+        <version>9.30.2</version>
     </dependency>
     <dependency>
         <groupId>com.nimbusds</groupId>
         <artifactId>oauth2-oidc-sdk</artifactId>
-        <version>9.35</version>
+        <version>10.7</version>
     </dependency>
     <dependency>
         <groupId>io.vertx</groupId>
@@ -74,7 +74,9 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>${maven-compiler-plugin.version}</version>
             <configuration>
-                <release>11</release>
+                <source>19</source>
+                <target>19</target>
+                <release>19</release>
             </configuration>
         </plugin>
         <plugin>
