--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,14 @@
         <version>10.7</version>
     </dependency>
     <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+    </dependency>
+    <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-junit5</artifactId>
         <scope>test</scope>
