--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,14 @@
     <exec-maven-plugin.version>3.5.0</exec-maven-plugin.version>
     <vertx.version>4.5.10</vertx.version>
     <junit-jupiter.version>5.11.3</junit-jupiter.version>
-    <main.verticle>org.qlein.oidcproxy.MainVerticle</main.verticle>
     <launcher.class>io.vertx.core.Launcher</launcher.class>
+    <logback.version>1.5.11</logback.version>
+    <kubernetes-client.version>6.12.1</kubernetes-client.version>
+    <nimbus-jose.version>9.40</nimbus-jose.version>
+    <jackson.version>2.17.2</jackson.version>
+    <oauth2-oidc.version>11.12.1</oauth2-oidc.version>
+    <slf4j.version>2.0.16</slf4j.version>
+    <main.verticle>org.qlein.oidcproxy.MainVerticle</main.verticle>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -43,27 +49,32 @@
     <dependency>
       <groupId>com.nimbusds</groupId>
       <artifactId>nimbus-jose-jwt</artifactId>
-      <version>9.37</version>
+      <version>${nimbus-jose.version}</version>
     </dependency>
     <dependency>
       <groupId>com.nimbusds</groupId>
       <artifactId>oauth2-oidc-sdk</artifactId>
-      <version>11.12.1</version>
+      <version>${oauth2-oidc.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-core</artifactId>
-      <version>1.5.11</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>2.0.16</version>
+      <version>${logback.version}</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.5.11</version>
+      <version>${logback.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
@@ -85,7 +96,7 @@
     <dependency>
       <groupId>io.fabric8</groupId>
       <artifactId>kubernetes-client</artifactId>
-      <version>6.12.1</version>
+      <version>${kubernetes-client.version}</version>
     </dependency>
   </dependencies>
   <build>
